force-app/main/default/objects/EMS_Timesheet__c/fields/Comp_off__c.field-meta.xml
<CustomField>
    <fullName>Comp_off__c</fullName>
    <label>Comp off</label>
    <length>20</length>
    <type>Text</type>
</CustomField>