force-app/main/default/objects/EMS_Timesheet__c/fields/EMS_TM_Project__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>EMS_TM_Project__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>