force-app/main/default/objects/EMS_Timesheet__c/fields/EMS_TM_Remarks__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Remarks__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>