force-app/main/default/objects/EMS_Timesheet__c/fields/EMS_TM_Sat__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Sat__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sat</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>