force-app/main/default/objects/EMS_Timesheet__c/fields/EMS_TM_Total__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Total__c</fullName>
    <description>Display the total working hours of employee</description>
    <formula>EMS_TM_Sun__c  +  EMS_TM_Mon__c  +  EMS_TM_Tue__c  +  EMS_TM_Wed__c + EMS_TM_Thu__c+ EMS_TM_Fri__c+ EMS_TM_Sat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>