force-app/main/default/objects/EMS_Timesheet__c/fields/EMS_TM_Week__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Week__c</fullName>
    <label>Week</label>
    <type>Date</type>
</CustomField>