force-app/main/default/objects/EMS_Timesheet__c/fields/enddate__c.field-meta.xml
<CustomField>
    <fullName>enddate__c</fullName>
    <formula>CASE( 
MOD( EMS_TM_Week__c - DATE(1900, 1, 6),7), 
0, EMS_TM_Week__c + 7, 
1, EMS_TM_Week__c + 6, 
2, EMS_TM_Week__c + 5, 
3, EMS_TM_Week__c + 4, 
4, EMS_TM_Week__c + 3, 
5, EMS_TM_Week__c + 2, 
6, EMS_TM_Week__c + 1,
7, EMS_TM_Week__c + 0, 
NULL 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>endWeek</label>
    <type>Date</type>
</CustomField>