force-app/main/default/objects/EMS_Timesheet__c/fields/Over_Worked_Days__c.field-meta.xml
<CustomField>
    <fullName>Over_Worked_Days__c</fullName>
    <label>Over Worked Days</label>
    <length>225</length>
    <type>Text</type>
</CustomField>