force-app/main/default/objects/EMS_Timesheet__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <formula>Resource__r.ContactName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource</label>
    <type>Text</type>
</CustomField>