force-app/main/default/objects/EMS_Timesheet__c/fields/startweek__c.field-meta.xml
<CustomField>
    <fullName>startweek__c</fullName>
    <formula>CASE(
MOD( EMS_TM_Week__c - DATE(1900, 1, 6),7),
0, EMS_TM_Week__c ,
1, EMS_TM_Week__c ,
2, EMS_TM_Week__c ,
3, EMS_TM_Week__c - 1,
4, EMS_TM_Week__c - 2,
5, EMS_TM_Week__c - 3,
6, EMS_TM_Week__c - 4,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>startweek</label>
    <type>Date</type>
</CustomField>