force-app/main/default/objects/EMS_Timesheet__c/fields/Under_hours_Days__c.field-meta.xml
<CustomField>
    <fullName>Under_hours_Days__c</fullName>
    <label>Under hours Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>