force-app/main/default/objects/EMS_Timesheet__c/fields/Week_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_End_Date__c</fullName>
    <label>Week End Date</label>
    <type>Date</type>
</CustomField>