force-app/main/default/objects/EMS_Timesheet__c/fields/WFH_Fri__c.field-meta.xml
<CustomField>
    <fullName>WFH_Fri__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WFH Fri</label>
    <type>Checkbox</type>
</CustomField>