force-app/main/default/objects/EMS_Timesheet__c/fields/WFH_Mon__c.field-meta.xml
<CustomField>
    <fullName>WFH_Mon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WFH Mon</label>
    <type>Checkbox</type>
</CustomField>