force-app/main/default/objects/EMS_Timesheet__c/fields/WFH_Sat__c.field-meta.xml
<CustomField>
    <fullName>WFH_Sat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WFO Saturday</label>
    <type>Checkbox</type>
</CustomField>