force-app/main/default/objects/EMS_Timesheet__c/fields/WFH_Sun__c.field-meta.xml
<CustomField>
    <fullName>WFH_Sun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WFO Sunday</label>
    <type>Checkbox</type>
</CustomField>