force-app/main/default/objects/EMS_Timesheet__c/fields/WFH_Thu__c.field-meta.xml
<CustomField>
    <fullName>WFH_Thu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WFO Thursday</label>
    <type>Checkbox</type>
</CustomField>