force-app/main/default/objects/EMS_Timesheet__c/fields/WFH_Tue__c.field-meta.xml
<CustomField>
    <fullName>WFH_Tue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WFH Tue</label>
    <type>Checkbox</type>
</CustomField>