force-app/main/default/objects/EMS_Timesheet__c/fields/WFH_Wed__c.field-meta.xml
<CustomField>
    <fullName>WFH_Wed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WFH Wed</label>
    <type>Checkbox</type>
</CustomField>