force-app/main/default/objects/EMS_Timesheet__c/validationRules/Acceptdateinbetweencurrentweek.validationRule-meta.xml
<ValidationRule>
    <fullName>Acceptdateinbetweencurrentweek</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 EMS_TM_Week__c- TODAY() &gt; 4,
CASE(MOD(  EMS_TM_Week__c  - DATE(1900, 1, 7), 7),
0, 0,
6, 0,
1) = 0)</errorConditionFormula>
    <errorMessage>Please enter the current WeekDate</errorMessage>
</ValidationRule>