force-app/main/default/objects/EMS_Timesheet__c/validationRules/Day5.validationRule-meta.xml
<ValidationRule>
    <fullName>Day5</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    EMS_TM_Thu__c  &gt; 24.00,
    EMS_TM_Thu__c  &lt; 8.00,
    ISBLANK( EMS_TM_Thu__c ) 
)</errorConditionFormula>
    <errorDisplayField>EMS_TM_Thu__c</errorDisplayField>
    <errorMessage>Working hours should be in between 1 to 10 and not Blank</errorMessage>
</ValidationRule>