force-app/main/default/objects/EMS_Timesheet__c/validationRules/Day7.validationRule-meta.xml
<ValidationRule>
    <fullName>Day7</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    EMS_TM_Sat__c  &gt; 24.00,
    EMS_TM_Sat__c  &lt; 0.00,
    ISBLANK( EMS_TM_Sat__c ) 
)</errorConditionFormula>
    <errorDisplayField>EMS_TM_Sat__c</errorDisplayField>
    <errorMessage>Working hours should be in between 1 to 10 and not Blank</errorMessage>
</ValidationRule>