force-app/main/default/objects/EMS_Timesheet__c/validationRules/Timesheet_creation_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Timesheet_creation_Check</fullName>
    <active>true</active>
    <errorConditionFormula>User__r.Contact.Timesheet_NoNeed__c = true</errorConditionFormula>
    <errorMessage>You don&apos;t  have access to create a timesheet</errorMessage>
</ValidationRule>