force-app/main/default/objects/EMS_Timesheet__c/validationRules/Totalhours_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Totalhours_validation</fullName>
    <active>true</active>
    <errorConditionFormula>EMS_TM_Total__c &gt;168</errorConditionFormula>
    <errorMessage>Total hours should not be  greater than 168</errorMessage>
</ValidationRule>