force-app/main/default/objects/EMS_Timesheet__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>Week_Start_Date__c</columns>
    <columns>Week_End_Date__c</columns>
    <columns>Resource__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>