force-app/main/default/objects/EMS_Timesheet__c/listViews/All_Timesheets.listView-meta.xml
<ListView>
    <fullName>All_Timesheets</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Resource__c</columns>
    <columns>Week_Start_Date__c</columns>
    <columns>Week_End_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>EMS_TM_Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Timesheets</label>
</ListView>